exports[`Table Column Select renders correctly 1`] = `
"html
  body
    table.uk-table
      col
      thead
        tr
      tbody
        tr
        tr
        tr
        tr
        tr
"
`;

exports[`Table Column Select renders correctly 2`] = `
"html
  body
    table.uk-table
      col
      thead
        tr
      tbody
        tr
        tr
        tr
        tr
        tr
    div
      input.uk-checkbox(type=\'checkbox\')
"
`;
